1. 修复因为IDEA升级导致不通过的测试用例 2. 更加ChatToolChoice选项（但似乎dashscope实现有问题？） 3. 增加函数调用时找不到函数失败异常