@@ -4,7 +4,7 @@ import io.github.oldmanpushcart.dashscope4j.ClientSupport;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static io.github.oldmanpushcart.dashscope4j.api.ApiAssertions.assertApiResponseSuccessful;
 
@@ -15,7 +15,7 @@ public class EmbeddingTestCase extends ClientSupport {
 
         final EmbeddingRequest request = EmbeddingRequest.newBuilder()
                 .model(EmbeddingModel.TEXT_EMBEDDING_V2)
-                .documents(List.of("我爱北京天安门", "天安门上太阳升"))
+                .documents(Arrays.asList("我爱北京天安门", "天安门上太阳升"))
                 .build();
 
         final EmbeddingResponse response = client.embedding().text().async(request)
